--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,7 +6,7 @@ samples: "config/samples.csv" # path to the sample metadata CSV
 ref_path: "config/reference.fasta" # path to the reference. Must be in config/
 ref_name: "reference" # name of the reference file without file extensions
 resource_config: "config/resources.yaml" # path to resources yaml config
-final_prefix: "" # prefix for final output files
+final_prefix: "test1" # prefix for final output files
 intervals: False #Set to True if you want to perform variant calling using interval approach.
 sentieon: False #set to True if you want to use sentieon, False if you want GATK
 sentieon_lic: "" #set to path of sentieon license
