--- a/workflow/envs/fastq2bam.yml
+++ b/workflow/envs/fastq2bam.yml
@@ -3,7 +3,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - trim-galore==0.6.5
+  - trim-galore
   - samtools==1.14
   - fastp==0.20.1
   - bwa==0.7.17
