Initial modifications for version 2 rules to operate on bridges.

--- a/.test/ecoli/config/config.yaml
+++ b/.test/ecoli/config/config.yaml
@@ -19,7 +19,7 @@ sort_reads: False
 # Variables you *might* need to change
 ##############################
 
-#refGenome: 
+#ref_name: 
 #refPath:
 
 # Interval approach options, only applicable if intervals is True
