--- a/workflow/modules/postprocess/Snakefile
+++ b/workflow/modules/postprocess/Snakefile
@@ -12,20 +12,20 @@ import snparcher_utils
 configfile: "config/config.yaml"
 
 samples = snparcher_utils.parse_sample_sheet(config)
-REFGENOME = samples['refGenome'].unique().tolist()
+ref_name = samples['ref_name'].unique().tolist()
 
 rule all:
     input:
-        expand("results/{refGenome}/{prefix}_filtered.vcf.gz", refGenome=REFGENOME, prefix=config['final_prefix']),
-        expand("results/{refGenome}/{prefix}_clean_snps.vcf.gz", refGenome=REFGENOME, prefix=config['final_prefix']),
-        expand("results/{refGenome}/{prefix}_clean_indels.vcf.gz", refGenome=REFGENOME, prefix=config['final_prefix'])
+        expand("results/{ref_name}/{prefix}_filtered.vcf.gz", ref_name=ref_name, prefix=config['final_prefix']),
+        expand("results/{ref_name}/{prefix}_clean_snps.vcf.gz", ref_name=ref_name, prefix=config['final_prefix']),
+        expand("results/{ref_name}/{prefix}_clean_indels.vcf.gz", ref_name=ref_name, prefix=config['final_prefix'])
 
 rule filter_individuals:
     """
     make list of individuals to exclude based on sampleType column
     """
     output:
-        include = "results/{refGenome}/postprocess/{prefix}_samps.txt",
+        include = "results/{ref_name}/postprocess/{prefix}_samps.txt",
     run:
         out_df = samples[["BioSample", "SampleType"]]
         out_df.drop_duplicates("BioSample", inplace=True)
@@ -39,11 +39,11 @@ rule basic_filter:
     sites with reference equal to N or alt equal to ., and sites with AF == 0.
     """
     input: 
-        vcf = "results/{refGenome}/{prefix}_raw.vcf.gz",
-        include = "results/{refGenome}/postprocess/{prefix}_samps.txt"
+        vcf = "results/{ref_name}/{prefix}_raw.vcf.gz",
+        include = "results/{ref_name}/postprocess/{prefix}_samps.txt"
     output:
-        filtered = "results/{refGenome}/{prefix}_filtered.vcf.gz",
-        filtered_idx = "results/{refGenome}/{prefix}_filtered.vcf.gz.csi"
+        filtered = "results/{ref_name}/{prefix}_filtered.vcf.gz",
+        filtered_idx = "results/{ref_name}/{prefix}_filtered.vcf.gz.csi"
     conda:
         "envs/filter.yml"
     resources:
@@ -60,11 +60,11 @@ rule update_bed:
     Updates callable sites bed file to add contigs less than threshold to regions to exclude
     """
     input:
-        bed = "results/{refGenome}/{prefix}_callable_sites.bed",
-        fai = "results/{refGenome}/data/genome/{refGenome}.fna.fai"
+        bed = "results/{ref_name}/{prefix}_callable_sites.bed",
+        fai = "results/{ref_name}/data/genome/{ref_name}.fna.fai"
     output:
-        bed = "results/{refGenome}/postprocess/{prefix}_exclude_sites.bed",
-        tmp_bed = temp("results/{refGenome}/postprocess/{prefix}_tmp.bed")
+        bed = "results/{ref_name}/postprocess/{prefix}_exclude_sites.bed",
+        tmp_bed = temp("results/{ref_name}/postprocess/{prefix}_tmp.bed")
     conda:
         "envs/bed.yml"
     resources:
@@ -79,12 +79,12 @@ rule update_bed:
 
 rule strict_filter:  
     input: 
-        bed = "results/{refGenome}/postprocess/{prefix}_exclude_sites.bed",
-        vcf = "results/{refGenome}/{prefix}_filtered.vcf.gz",
-        filtered_idx = "results/{refGenome}/{prefix}_filtered.vcf.gz.csi"
+        bed = "results/{ref_name}/postprocess/{prefix}_exclude_sites.bed",
+        vcf = "results/{ref_name}/{prefix}_filtered.vcf.gz",
+        filtered_idx = "results/{ref_name}/{prefix}_filtered.vcf.gz.csi"
     output: 
-        vcf = temp("results/{refGenome}/postprocess/{prefix}_filtered.TEMP.vcf.gz"),
-        idx = temp("results/{refGenome}/postprocess/{prefix}_filtered.TEMP.vcf.gz.csi")
+        vcf = temp("results/{ref_name}/postprocess/{prefix}_filtered.TEMP.vcf.gz"),
+        idx = temp("results/{ref_name}/postprocess/{prefix}_filtered.TEMP.vcf.gz.csi")
     conda:
         "envs/filter.yml"
     params:
@@ -113,15 +113,15 @@ rule subset_indels:
     Produce a clean vcf with only indels variants.
     """
     input: 
-        vcf = "results/{refGenome}/postprocess/{prefix}_filtered.TEMP.vcf.gz",
-        idx = "results/{refGenome}/postprocess/{prefix}_filtered.TEMP.vcf.gz.csi",
+        vcf = "results/{ref_name}/postprocess/{prefix}_filtered.TEMP.vcf.gz",
+        idx = "results/{ref_name}/postprocess/{prefix}_filtered.TEMP.vcf.gz.csi",
     output: 
-        vcf = "results/{refGenome}/{prefix}_clean_indels.vcf.gz",
-        idx = "results/{refGenome}/{prefix}_clean_indels.vcf.gz.tbi"
+        vcf = "results/{ref_name}/{prefix}_clean_indels.vcf.gz",
+        idx = "results/{ref_name}/{prefix}_clean_indels.vcf.gz.tbi"
     conda:
         "envs/filter.yml"
     log:
-        "logs/{refGenome}/postprocess/{prefix}_subset_indels.txt"
+        "logs/{ref_name}/postprocess/{prefix}_subset_indels.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 4000
     shell:
@@ -135,15 +135,15 @@ rule subset_snps:
     Produce a clean vcf with only simple snps.
     """
     input: 
-        vcf = "results/{refGenome}/postprocess/{prefix}_filtered.TEMP.vcf.gz",
-        idx = "results/{refGenome}/postprocess/{prefix}_filtered.TEMP.vcf.gz.csi"
+        vcf = "results/{ref_name}/postprocess/{prefix}_filtered.TEMP.vcf.gz",
+        idx = "results/{ref_name}/postprocess/{prefix}_filtered.TEMP.vcf.gz.csi"
     output: 
-        vcf = "results/{refGenome}/{prefix}_clean_snps.vcf.gz",
-        idx = "results/{refGenome}/{prefix}_clean_snps.vcf.gz.tbi"
+        vcf = "results/{ref_name}/{prefix}_clean_snps.vcf.gz",
+        idx = "results/{ref_name}/{prefix}_clean_snps.vcf.gz.tbi"
     conda:
         "envs/filter.yml"    
     log:
-        "logs/{refGenome}/postprocess/{prefix}_subset_snps.txt"
+        "logs/{ref_name}/postprocess/{prefix}_subset_snps.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 4000
     shell:
