--- a/workflow/modules/qc/Snakefile
+++ b/workflow/modules/qc/Snakefile
@@ -3,21 +3,21 @@ include: "common.smk"
 
 
 samples = snparcher_utils.parse_sample_sheet(config)
-REFGENOME = samples['refGenome'].unique().tolist()
+ref_name = samples['ref_name'].unique().tolist()
 
 rule all:
     input:
-        expand("results/{refGenome}/QC/{prefix}_qc.html", refGenome=REFGENOME, prefix=config['final_prefix'])
+        expand("results/{ref_name}/QC/{prefix}_qc.html", ref_name=ref_name, prefix=config['final_prefix'])
 
 rule check_fai:
     """
     checks fai file for numeric first column, then do not run plink and rest of workflow if they are all numeric
     """
     input:
-        vcf = "results/{refGenome}/{prefix}_raw.vcf.gz",
-        fai = "results/{refGenome}/data/genome/{refGenome}.fna.fai",
+        vcf = "results/{ref_name}/{prefix}_raw.vcf.gz",
+        fai = "results/{ref_name}/data/genome/{ref_name}.fna.fai",
     output:
-        faiResult = "results/{refGenome}/QC/{prefix}_fai_tmp.txt"
+        faiResult = "results/{ref_name}/QC/{prefix}_fai_tmp.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 1000
     run:
@@ -25,20 +25,20 @@ rule check_fai:
 
 rule vcftools_individuals:
     input:
-        vcf = "results/{refGenome}/{prefix}_raw.vcf.gz"
+        vcf = "results/{ref_name}/{prefix}_raw.vcf.gz"
     output:
-        depth = "results/{refGenome}/QC/{prefix}.idepth",
-        miss = "results/{refGenome}/QC/{prefix}.imiss",
-        samps = "results/{refGenome}/QC/{prefix}.samps.txt",
-        summ = "results/{refGenome}/QC/{prefix}.FILTER.summary",
-        het = "results/{refGenome}/QC/{prefix}.het"
+        depth = "results/{ref_name}/QC/{prefix}.idepth",
+        miss = "results/{ref_name}/QC/{prefix}.imiss",
+        samps = "results/{ref_name}/QC/{prefix}.samps.txt",
+        summ = "results/{ref_name}/QC/{prefix}.FILTER.summary",
+        het = "results/{ref_name}/QC/{prefix}.het"
     conda:
         "envs/vcftools_individuals.yml"
     params:
         prefix = lambda wc, input: os.path.join(input.vcf.rsplit("/", 1)[0], "QC", wc.prefix),
         min_depth = config["min_depth"]
     log:
-        "logs/{refGenome}/QC/vcftools_individuals/{prefix}.txt"
+        "logs/{ref_name}/QC/vcftools_individuals/{prefix}.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 4000
     shell:
@@ -52,23 +52,23 @@ rule vcftools_individuals:
 
 rule subsample_snps:
     input:
-        vcf = "results/{refGenome}/{prefix}_raw.vcf.gz",
-        samps = "results/{refGenome}/QC/{prefix}.samps.txt",
-        fai = "results/{refGenome}/data/genome/{refGenome}.fna.fai",
-        sumstats = "results/{refGenome}/summary_stats/{prefix}_bam_sumstats.txt"
+        vcf = "results/{ref_name}/{prefix}_raw.vcf.gz",
+        samps = "results/{ref_name}/QC/{prefix}.samps.txt",
+        fai = "results/{ref_name}/data/genome/{ref_name}.fna.fai",
+        sumstats = "results/{ref_name}/summary_stats/{prefix}_bam_sumstats.txt"
     output:
-        filtered = temp("results/{refGenome}/QC/{prefix}_filtered.vcf.gz"),
-        filtered_idx = temp("results/{refGenome}/QC/{prefix}_filtered.vcf.gz.csi"),
-        pruned = "results/{refGenome}/QC/{prefix}.pruned.vcf.gz",
-        snpqc = "results/{refGenome}/QC/{prefix}_snpqc.txt",
-        fai = "results/{refGenome}/QC/{prefix}.fna.fai",
-        sumstats = "results/{refGenome}/QC/{prefix}_bam_sumstats.txt"
+        filtered = temp("results/{ref_name}/QC/{prefix}_filtered.vcf.gz"),
+        filtered_idx = temp("results/{ref_name}/QC/{prefix}_filtered.vcf.gz.csi"),
+        pruned = "results/{ref_name}/QC/{prefix}.pruned.vcf.gz",
+        snpqc = "results/{ref_name}/QC/{prefix}_snpqc.txt",
+        fai = "results/{ref_name}/QC/{prefix}.fna.fai",
+        sumstats = "results/{ref_name}/QC/{prefix}_bam_sumstats.txt"
     conda:
         "envs/subsample_snps.yml"
     params:
         chr_ex = config["scaffolds_to_exclude"]
     log:
-        "logs/{refGenome}/QC/subsample_snps/{prefix}.txt"
+        "logs/{ref_name}/QC/subsample_snps/{prefix}.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 4000
     shell:
@@ -107,23 +107,23 @@ rule plink:
     Call plink PCA.
     """
     input:
-        vcf = "results/{refGenome}/QC/{prefix}.pruned.vcf.gz",
-        faiResult = "results/{refGenome}/QC/{prefix}_fai_tmp.txt"        
+        vcf = "results/{ref_name}/QC/{prefix}.pruned.vcf.gz",
+        faiResult = "results/{ref_name}/QC/{prefix}_fai_tmp.txt"        
     params:
         prefix = lambda wc, input: input.vcf.replace(".pruned.vcf.gz", "")
     output: 
-        bed = "results/{refGenome}/QC/{prefix}.bed",
-        bim = "results/{refGenome}/QC/{prefix}.bim",
-        fam = "results/{refGenome}/QC/{prefix}.fam",
-        eigenvec = "results/{refGenome}/QC/{prefix}.eigenvec",
-        eigenval = "results/{refGenome}/QC/{prefix}.eigenval",
-        dist = "results/{refGenome}/QC/{prefix}.dist",
-        distid = "results/{refGenome}/QC/{prefix}.dist.id",
-        king = "results/{refGenome}/QC/{prefix}.king"
+        bed = "results/{ref_name}/QC/{prefix}.bed",
+        bim = "results/{ref_name}/QC/{prefix}.bim",
+        fam = "results/{ref_name}/QC/{prefix}.fam",
+        eigenvec = "results/{ref_name}/QC/{prefix}.eigenvec",
+        eigenval = "results/{ref_name}/QC/{prefix}.eigenval",
+        dist = "results/{ref_name}/QC/{prefix}.dist",
+        distid = "results/{ref_name}/QC/{prefix}.dist.id",
+        king = "results/{ref_name}/QC/{prefix}.king"
     conda:
         "envs/plink.yml"
     log:
-        "logs/{refGenome}/QC/plink/{prefix}.txt"
+        "logs/{ref_name}/QC/plink/{prefix}.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 2000
     shell:
@@ -138,11 +138,11 @@ rule setup_admixture:
     admixture requires all chromosome names to be integers, this sets them to be 1:n
     """
     input:
-        bim = "results/{refGenome}/QC/{prefix}.bim",
-        fai = "results/{refGenome}/data/genome/{refGenome}.fna.fai",
+        bim = "results/{ref_name}/QC/{prefix}.bim",
+        fai = "results/{ref_name}/data/genome/{ref_name}.fna.fai",
     output:
-        bim = "results/{refGenome}/QC/{prefix}.bim_fixed",
-        bim_back = "results/{refGenome}/QC/{prefix}.bim.orig"
+        bim = "results/{ref_name}/QC/{prefix}.bim_fixed",
+        bim_back = "results/{ref_name}/QC/{prefix}.bim.orig"
     script:
         "scripts/contigs4admixture.py"
 
@@ -151,18 +151,18 @@ rule admixture:
     Call Admixture. First, make a bim file that has no charecters in the chromosomes
     """
     input:
-        bed = "results/{refGenome}/QC/{prefix}.bed",
-        bim = "results/{refGenome}/QC/{prefix}.bim",
-        fam = "results/{refGenome}/QC/{prefix}.fam",
-        bim_fixed = "results/{refGenome}/QC/{prefix}.bim_fixed",
-        bim_back = "results/{refGenome}/QC/{prefix}.bim.orig"
+        bed = "results/{ref_name}/QC/{prefix}.bed",
+        bim = "results/{ref_name}/QC/{prefix}.bim",
+        fam = "results/{ref_name}/QC/{prefix}.fam",
+        bim_fixed = "results/{ref_name}/QC/{prefix}.bim_fixed",
+        bim_back = "results/{ref_name}/QC/{prefix}.bim.orig"
     output:
-        admix = "results/{refGenome}/QC/{prefix}.3.Q",
-        admix2 = "results/{refGenome}/QC/{prefix}.2.Q"
+        admix = "results/{ref_name}/QC/{prefix}.3.Q",
+        admix2 = "results/{ref_name}/QC/{prefix}.2.Q"
     params:
         outdir = lambda wc, input: input.bed.rsplit("/", 1)[0]
     log:
-        "logs/{refGenome}/QC/admixture/{prefix}.txt"
+        "logs/{ref_name}/QC/admixture/{prefix}.txt"
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 4000
     conda:
@@ -180,9 +180,9 @@ rule admixture:
 
 rule generate_coords_file:
     output: 
-        "results/{refGenome}/QC/{prefix}.coords.txt"
+        "results/{ref_name}/QC/{prefix}.coords.txt"
     run:
-        out_df = samples.loc[(samples['refGenome'] == wildcards.refGenome)][["BioSample", "long", "lat"]]
+        out_df = samples.loc[(samples['ref_name'] == wildcards.ref_name)][["BioSample", "long", "lat"]]
         out_df.drop_duplicates("BioSample", inplace=True)
         out_df.dropna(subset=["long", "lat"], thresh=1, inplace=True)
         out_df.to_csv(output[0], index=False, sep="\t", header=False)
@@ -192,24 +192,24 @@ rule qc_plots:
     Call plotting script
     """
     input:
-        eigenvec = "results/{refGenome}/QC/{prefix}.eigenvec",
-        eigenval = "results/{refGenome}/QC/{prefix}.eigenval",
-        depth = "results/{refGenome}/QC/{prefix}.idepth",
-        dist = "results/{refGenome}/QC/{prefix}.dist",
-        distid = "results/{refGenome}/QC/{prefix}.dist.id",
-        king = "results/{refGenome}/QC/{prefix}.king",
-        miss = "results/{refGenome}/QC/{prefix}.imiss",
-        admix3 = "results/{refGenome}/QC/{prefix}.3.Q",
-        admix2 = "results/{refGenome}/QC/{prefix}.2.Q",
-        snpqc = "results/{refGenome}/QC/{prefix}_snpqc.txt",
-        faiResult = "results/{refGenome}/QC/{prefix}_fai_tmp.txt",
-        bed = "results/{refGenome}/QC/{prefix}.bed",
-        bim = "results/{refGenome}/QC/{prefix}.bim",
-        fam = "results/{refGenome}/QC/{prefix}.fam",
-        sumstats = "results/{refGenome}/QC/{prefix}_bam_sumstats.txt",
-        summ = "results/{refGenome}/QC/{prefix}.FILTER.summary",
-        het = "results/{refGenome}/QC/{prefix}.het",
-        fai = "results/{refGenome}/QC/{prefix}.fna.fai",
+        eigenvec = "results/{ref_name}/QC/{prefix}.eigenvec",
+        eigenval = "results/{ref_name}/QC/{prefix}.eigenval",
+        depth = "results/{ref_name}/QC/{prefix}.idepth",
+        dist = "results/{ref_name}/QC/{prefix}.dist",
+        distid = "results/{ref_name}/QC/{prefix}.dist.id",
+        king = "results/{ref_name}/QC/{prefix}.king",
+        miss = "results/{ref_name}/QC/{prefix}.imiss",
+        admix3 = "results/{ref_name}/QC/{prefix}.3.Q",
+        admix2 = "results/{ref_name}/QC/{prefix}.2.Q",
+        snpqc = "results/{ref_name}/QC/{prefix}_snpqc.txt",
+        faiResult = "results/{ref_name}/QC/{prefix}_fai_tmp.txt",
+        bed = "results/{ref_name}/QC/{prefix}.bed",
+        bim = "results/{ref_name}/QC/{prefix}.bim",
+        fam = "results/{ref_name}/QC/{prefix}.fam",
+        sumstats = "results/{ref_name}/QC/{prefix}_bam_sumstats.txt",
+        summ = "results/{ref_name}/QC/{prefix}.FILTER.summary",
+        het = "results/{ref_name}/QC/{prefix}.het",
+        fai = "results/{ref_name}/QC/{prefix}.fna.fai",
         coords = get_coords_if_available
     params:
         prefix = lambda wc, input: input.het[:-4],
@@ -218,7 +218,7 @@ rule qc_plots:
     resources:
         mem_mb = lambda wildcards, attempt: attempt * 2000
     output: 
-        qcpdf = "results/{refGenome}/QC/{prefix}_qc.html"
+        qcpdf = "results/{ref_name}/QC/{prefix}_qc.html"
     conda:
         "envs/qc.yml"
     script:
