--- a/workflow/modules/qc/config/test_qc_gls_config.yaml
+++ b/workflow/modules/qc/config/test_qc_gls_config.yaml
@@ -48,7 +48,7 @@ nClusters: 3
 
 output: "results/"
 fastqDir: "data/fastq/"                           # this is where raw fastqs are downloaded
-refGenomeDir: "data/genome/"                      # where reference genomes go
+ref_nameDir: "data/genome/"                      # where reference genomes go
 fastq2bamDir: "fastq2bam/"
 fastqFilterDir: "00_fastqFiltered/"     # new directory created for filtered fastq reads
 bamDir: "01_mappedReads/"               # new directory created for BAM files
