--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,7 +11,7 @@ remote_reads: False # Set True if reads are in a location seperate from --defaul
 remote_reads_prefix: "" # set to google bucket prefix where reads live. FOR SNAKEMAKE 7.X.X ONLY.
 bigtmp: "" #Set to a path with lots of free space to use for commands that require large amounts of temp space; defaults to system tmpdir if empty
 cov_filter: True #set to True if you want to include coverage thresholds in the callable sites bed file (default uses mappability only)
-generate_trackhub: True #Set to true if you want to generate a Genome Browser Trackhub. Dependent on postprocessing module.
+generate_trackhub: False #Set to true if you want to generate a Genome Browser Trackhub. Dependent on postprocessing module.
 trackhub_email: ""
 mark_duplicates: True
 sort_reads: False
@@ -21,7 +21,7 @@ sort_reads: False
 
 # Set reference genome here if you would like to you use the same reference genome for all samples in sample sheet. See docs for more info.
 # ref_name:
-# refPath:
+# ref_name:
 
 # Interval approach options, only applicable if intervals is True
 minNmer: 500 # the minimum Nmer used to split up the genome; e.g. a value of 200 means only Nmers 200 or greater are used to define the boundaries of intervals. The minimum is 50.
